Update dependencies and fix security vulnerabilities
- Update pdfjs-dist from 2.16.105 to 5.4.54 (fixes security vulnerability)
- Update import statement to use newer pdfjs-dist API
- Update worker source URL to match new version
- Resolve dependency deprecation warnings
- Improve overall security posture

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
-    "pdfjs-dist": "^2.16.105",
+    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwind-variants": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
